--- a/sobre.html
+++ b/sobre.html
@@ -16,8 +16,8 @@
         <div class="container">
             <div class="flex">
                 <a class="logo" href="#">D. Paiva</a>
-                <a class="in-english" href=""><img src="https://cdn-icons-png.flaticon.com/512/206/206626.png" width="40px" height="40px"></a>
-                <a class="in-portuguese" href=""><img src="https://cdn-icons-png.flaticon.com/256/206/206597.png" width="40px" height="40px"></a>
+                <a class="in-english" href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/206/206626.png" width="40px" height="40px"></a>
+                <a class="in-portuguese" href="https://paivoteeee.github.io/colaress/"><img src="https://cdn-icons-png.flaticon.com/256/206/206597.png" width="40px" height="40px"></a>
                 <nav class="nuv">
                     <ul>
                         <li><a class="ai" href="index.html">home</a></li>
