--- a/lojas.html
+++ b/lojas.html
@@ -20,12 +20,12 @@
                 <nav class="nuv">
                     <ul>
                         <li><a class="aii" href="index.html">home</a></li>
-                        <li><a class="aii" href="sobre.html">Sobre</a></li>
-                        <li><a class="aii" href="lojas.html">Lojas</a></li>
+                        <li><a class="aii" href="sobre.html">about</a></li>
+                        <li><a class="aii" href="lojas.html">stores</a></li>
                     </ul>
                 </nav>
                 <div class="btn-contato">
-                    <a href="contato.html"><button class="buton">Contato</button></a>
+                    <a href="contato.html"><button class="buton">Contact</button></a>
                 </div>
             </div><!--flex-->
 
