--- a/contato.html
+++ b/contato.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="cntt.css">
+    <title>Paiva's - Contact</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="cntt.css">
     <link rel="icon" href="img/letter-d-icon.png" type="image/jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Paiva's - Contact</title>
 </head>
 <body>
     <header class="menu">
         <div class="container">
             <div class="flex">
-                <a href="https://paivoteeee.github.io/colar/index.html?classId=8a424a63-80de-4850-b227-a91e8fce9a5f&assignmentId=56c2ba11-cc14-4db1-8e1c-6ddc271a6763&submissionId=22261920-5ee1-7775-4a5b-3a137b8b2322"><button class="port">Portuguese</button></a>
                 <a class="logo" href="#">D. Paiva</a>
                 <nav class="nuv">
                     <ul>
                         <li><a class="ai" href="index.html">home</a></li>
                         <li><a class="ai" href="sobre.html">about</a></li>
-                        <li><a class="ai" href="lojas.html">stores</a></li>
+                        <li><a class="ai" href="lojas.html">sotres</a></li>
                     </ul>
                 </nav>
                 <div class="btn-contato">
-                    <a href="contato.html"><button class="buton">Contact</button></a>
+                    <a href="contato.html"><button class="buton">Contact
+                </button></a>
                 </div>
             </div><!--flex-->
 
@@ -32,7 +32,7 @@
     <div class="box">
         <form method="get">
             <fieldset>
-                <legend>Customer Form</legend>
+                <legend>Formulário de Clientes</legend>
                 <br>
                 <div class="inputbox">
                     <input type="text" name="nome" id="nome" class="inputuser" required>
@@ -46,23 +46,21 @@
                 <br><br>
                 <div class="inputbox">
                     <input type="tel" name="telefone" id="telefone" class="inputuser" required>
-                    <label for="nome"class="labelinput3">Telephone</label>
+                    <label for="nome"class="labelinput3">telephone</label>
                 </div>
                 <br><br>
                 <div class="inputbox">
                     <label for="nome"class="labelinput4">Contact us</label>
                     <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
-                </div>
-                <input type="submit" value="send" class="enviar">
+                <input type="submit" value="enviar" class="send">
                 <br>
             
             </fieldset>
         </form>
     </div>
     <footer id="footer2">
-        <P class="foot">Daniel Tertuliano 2023 - &copyTodos os direitos reservados</P>
-        <P class="foot">Trabalho acadêmico - Sem fins lucrativos</P>
-    
+        <P class="foot">Daniel Tertuliano 2023 - &copyAll rights reserved</P>
+        <P class="foot">Academic Work - non-profit</P>
     </footer>
     <script src="menu.js"></script>
 </body>
