--- a/contato.html
+++ b/contato.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a class="ai" href="index.html">home</a></li>
                         <li><a class="ai" href="sobre.html">about</a></li>
-                        <li><a class="ai" href="lojas.html">sotres</a></li>
+                        <li><a class="ai" href="lojas.html">stores</a></li>
                     </ul>
                 </nav>
                 <div class="btn-contato">
